普遍性を用いた構成→普遍的構成

--- a/books/850b20937af93b/11-1.md
+++ b/books/850b20937af93b/11-1.md
@@ -66,7 +66,7 @@ $$
 
 このことは，ユーザインタラクションへのアプローチである **FRP (Functional Reactive Programming)** において最もよくあらわれている．起こりえるユーザアクションすべてに対して分離したハンドラ(何らかの可変な共有状態にアクセスできる)を書く代わりに，FRPは外部のイベントを無限リストとして扱い，変換の列をそれに適用する．概念的には，未来におこるアクションすべてがそこにあり，プログラムに対する入力データとして利用可能である．プログラムの観点からすると，円周率$\pi$の桁の列も，乱数の列も，ハードウェアから来るマウスの位置の列も何ら変わりない．どの場合も，もし$n$番目が欲しいのなら，最初の$n-1$個を読み飛ばす必要がある．これが時系列のイベント列に適用されるとき，この性質は **因果性 (causality)** と呼ばれる．
 
-一体これが圏論と何の関係があるのだろう？私は，圏論が大域的なアプローチを推し進め，宣言的プログラミングの支えになるのだということを言いたい．まず始めに，圏論には微積分学と違って備え付けの距離や近傍や時間の概念はない．あるのは抽象的な対象と，それらの間の抽象的な繋がりだけだ．もし$A$から$B$まで何歩かで行けるのなら，そこには1歩でも行くことができる．さらに，圏論での重要な道具は普遍性による構成 (universal construction)であり，これは大域的なアプローチの典型である．我々はこのことを実際に，例えば圏論的な直積の定義で見てきた．この定義は性質を指定することによって行なわれる --- まさに宣言的なアプローチだ．直積は2つの射影を備えており，さらにそのような対象のうち一番良いものである --- つまりある性質を最適にするようなものであり，その性質とはそのような他の対象の射影を分解するというものだ．
+一体これが圏論と何の関係があるのだろう？私は，圏論が大域的なアプローチを推し進め，宣言的プログラミングの支えになるのだということを言いたい．まず始めに，圏論には微積分学と違って備え付けの距離や近傍や時間の概念はない．あるのは抽象的な対象と，それらの間の抽象的な繋がりだけだ．もし$A$から$B$まで何歩かで行けるのなら，そこには1歩でも行くことができる．さらに，圏論での重要な道具は普遍的構成(universal construction)であり，これは大域的なアプローチの典型である．我々はこのことを実際に，例えば圏論的な直積の定義で見てきた．この定義は性質を指定することによって行なわれる --- まさに宣言的なアプローチだ．直積は2つの射影を備えており，さらにそのような対象のうち一番良いものである --- つまりある性質を最適にするようなものであり，その性質とはそのような他の対象の射影を分解するというものだ．
 
 
 ![](https://storage.googleapis.com/zenn-user-upload/huo7oexpgcrw06q7kksrjfnbt5yj)
@@ -75,7 +75,7 @@ $$
 
 反対に，この定義を(ずっと命令的な)カルテジアン積の昔ながらの定義と比較してみよう．その直積の元をどうやって作るかを，1つの集合から元を取ってきて，さらにもう1つの集合からもう1つの元を取ってくることによって記述することになる．これがペアを作るためのレシピだ．さらに，ペアを分解するためのレシピもある．
 
-ほとんどのプログラミング言語(Haskellのような関数型言語を含む)では，直積型，直和型，そして関数型は組み込みであり，それらが普遍性による構成で定義されることはない．そういう圏論的なプログラミング言語を作ろうという試みもあるけれども[^3]．
+ほとんどのプログラミング言語(Haskellのような関数型言語を含む)では，直積型，直和型，そして関数型は組み込みであり，それらが普遍的構成で定義されることはない．そういう圏論的なプログラミング言語を作ろうという試みもあるけれども[^3]．
 
 直接的に使われるにせよそうでないにせよ，圏論的な定義はすでに存在するプログラミングでの構成を正当化し，新しいものを生み出してくれる．一番重要なことは，圏論はコンピュータプログラムについて宣言的なレベルで論じるためのメタ言語を提供してくれることである．さらに，コードに落とす前に問題の仕様について論じることを促してもくれる．
 
