解析力学のところの注をおとす

--- a/books/850b20937af93b/11-1.md
+++ b/books/850b20937af93b/11-1.md
@@ -50,7 +50,7 @@ $$
 
 ![](https://storage.googleapis.com/zenn-user-upload/78s9tf2eogsvn2cd369425fzdyc6)
 
-古典力学は，すべて最小作用の原理から導くことができる．どの軌跡についても，作用はラグランジアンを積分することにより計算することができる．ただし，ラグランジアンは運動エネルギーとポテンシャルエネルギーとの差である(注意: 和ではなく差である --- 和はエネルギーの総和になる)．目標に向けて迫撃砲を撃ったなら，砲弾は最初は上昇し，それによって重力に由来するポテンシャルエネルギーを高くし，そこで時間をつぶして作用に負の貢献をする．砲弾は放物線の頂点で減速し，運動エネルギーを最小化する．その後，ポテンシャルエネルギーが低いところを早く駆け抜けるために，砲弾は加速する[^2]．
+古典力学は，すべて最小作用の原理から導くことができる．どの軌跡についても，作用はラグランジアンを積分することにより計算することができる．ただし，ラグランジアンは運動エネルギーとポテンシャルエネルギーとの差である(注意: 和ではなく差である --- 和はエネルギーの総和になる)．目標に向けて迫撃砲を撃ったなら，砲弾は最初は上昇し，それによって重力に由来するポテンシャルエネルギーを高くし，そこで時間をつぶして作用に負の貢献をする．砲弾は放物線の頂点で減速し，運動エネルギーを最小化する．その後，ポテンシャルエネルギーが低いところを早く駆け抜けるために，砲弾は加速する．
 
 ![](https://storage.googleapis.com/zenn-user-upload/g4v028502l5yvozva81j1svz3h49)
 
@@ -75,12 +75,11 @@ $$
 
 反対に，この定義を(ずっと命令的な)カルテジアン積の昔ながらの定義と比較してみよう．その直積の元をどうやって作るかを，1つの集合から元を取ってきて，さらにもう1つの集合からもう1つの元を取ってくることによって記述することになる．これがペアを作るためのレシピだ．さらに，ペアを分解するためのレシピもある．
 
-ほとんどのプログラミング言語(Haskellのような関数型言語を含む)では，直積型，直和型，そして関数型は組み込みであり，それらが普遍的構成で定義されることはない．そういう圏論的なプログラミング言語を作ろうという試みもあるけれども[^3]．
+ほとんどのプログラミング言語(Haskellのような関数型言語を含む)では，直積型，直和型，そして関数型は組み込みであり，それらが普遍的構成で定義されることはない．そういう圏論的なプログラミング言語を作ろうという試みもあるけれども[^2]．
 
 直接的に使われるにせよそうでないにせよ，圏論的な定義はすでに存在するプログラミングでの構成を正当化し，新しいものを生み出してくれる．一番重要なことは，圏論はコンピュータプログラムについて宣言的なレベルで論じるためのメタ言語を提供してくれることである．さらに，コードに落とす前に問題の仕様について論じることを促してもくれる．
 
 [^1]: 訳注: アタリ社のテレビゲーム
-[^2]: 訳注: 解析力学をやったことがないのであとで修正するかもしれません．
-[^3]: 原注: 例えば，萩野達也の学位論文を見よ． http://web.sfc.keio.ac.jp/~hagino/thesis.pdf
+[^2]: 原注: 例えば，萩野達也の学位論文を見よ． http://web.sfc.keio.ac.jp/~hagino/thesis.pdf
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
