--- a/books/850b20937af93b/5-0.md
+++ b/books/850b20937af93b/5-0.md
@@ -6,7 +6,7 @@ title: "§5. 積と余積"
 
 古代ギリシャのエウリピデスは「我々とは我々の人づきあいである」と語った．我々はその関係性で定義される．このことは圏論に特に当てはまる．もし圏から特定の対象を取り出したければ，その他の対象（および自身）との関係性のパターンを記述することによって初めて可能になる．この関係性は射によって定義される．
 
-圏論では**普遍構成** (universal construction) という，対象をその関係性で定義するための構成方法をよく用いる．一つのやり方としては，対象と射から構成される特定のパターンを取り上げ，圏論でのその全ての出現傾向をみることだ．もしそれが十分に共通なパターンであり，また圏が大きければ，そのパターンに当てはまる事象を見つける機会は多くなる．発見したそれらの事象の間になんらかの順序付けをし，パターンに一番良く当てはまると思われるものを取り出す，というやり方である．
+圏論では**普遍的構成** (universal construction) という，対象をその関係性で定義するための構成方法をよく用いる．一つのやり方としては，対象と射から構成される特定のパターンを取り上げ，圏論でのその全ての出現傾向をみることだ．もしそれが十分に共通なパターンであり，また圏が大きければ，そのパターンに当てはまる事象を見つける機会は多くなる．発見したそれらの事象の間になんらかの順序付けをし，パターンに一番良く当てはまると思われるものを取り出す，というやり方である．
 
 この過程はweb検索と似ている．クエリはパターンに対応する．一般的過ぎるクエリはたくさんの検索結果を返すので，**再現率** (recall) が増える．検索結果のいくつかは欲しい結果で，その他はそうでないものだ．後者を除外するためにはクエリを詳細にする．これによって**適合率** (precision) が増える．最後に検索エンジンが検索結果に順序付け，願わくば興味のある結果が上位に表示される．
 
