格言をなおす

--- a/books/850b20937af93b/5-0.md
+++ b/books/850b20937af93b/5-0.md
@@ -4,7 +4,7 @@ title: "§5. 積と余積"
 
 原文: [5. Products and Coproducts](https://bartoszmilewski.com/2015/01/07/products-and-coproducts/)
 
-古代ギリシャのエウリピデスは「我々とは我々の人づきあいである」と語った．我々はその関係性で定義される．このことは圏論に特に当てはまる．もし圏から特定の対象を取り出したければ，その他の対象（および自身）との関係性のパターンを記述することによって初めて可能になる．この関係性は射によって定義される．
+古代ギリシャのエウリピデスは「人とは，その人の保つ人間関係そのものだ^[訳注：Every man is like the company he is wont to keep.]」と語った．我々はその関係性で定義される．このことは圏論に特に当てはまる．もし圏から特定の対象を取り出したければ，その他の対象（および自身）との関係性のパターンを記述することによって初めて可能になる．この関係性は射によって定義される．
 
 圏論では**普遍的構成** (universal construction) という，対象をその関係性で定義するための構成方法をよく用いる．一つのやり方としては，対象と射から構成される特定の形状であるパターンを取り上げ，圏論でのその全ての出現傾向をみることだ．もしそれが十分に共通なパターンであり，また圏が大きければ，そのパターンに当てはまる事象を見つける機会は多くなる．発見したそれらの事象の間になんらかの順序付けをし，パターンに一番良く当てはまると思われるものを取り出す，というやり方である．
 
