--- a/books/850b20937af93b/2-4.md
+++ b/books/850b20937af93b/2-4.md
@@ -3,7 +3,7 @@ title: "2.4 なぜ数学的モデルが必要か？"
 ---
 あなたはプログラマとして，あなたが使うプログラミング言語の構文や文法を熟知しているはずだ．これらは通常，言語仕様の冒頭部分で形式的な表記として記述されている．しかし言語の意味，または意味論 (semantics) は，記述するのがずっと難しい．それはより多くのページを要し，形式的に書かれていることは稀だし，完全であることはほぼない．そのため，"言語弁護士" たちの間では常に議論が行われており，言語基準の細かな点を解説した本を作り出す "家内工業" が乱立している．
 
-言語のセマンティクスを記述するための形式的なツールはあるが，それは複雑であるために，ほとんどの場合は簡略化された学術言語に対して使用されており，現実の巨大なプログラミング言語に対しては使用されていない．そのようなツールの一つである **操作的意味論** (operational semantics) は，プログラムの実行の仕組みを説明する．それは形式化された理想的なインタープリタを定義する．C++ などの産業用言語の意味論は通常「抽象マシン」によって非形式的な操作推論を用いて記述される^[訳注：訳者はこの分野のことは何も知らないので，不自然な訳になっている可能性が高い．]．
+言語の意味論を記述するための形式的なツールはあるが，それは複雑であるために，ほとんどの場合は簡略化された学術言語に対して使用されており，現実の巨大なプログラミング言語に対しては使用されていない．そのようなツールの一つである **操作的意味論** (operational semantics) は，プログラムの実行の仕組みを説明する．それは形式化された理想的なインタープリタを定義する．C++ などの産業用言語の意味論は通常「抽象マシン」によって非形式的な操作推論を用いて記述される^[訳注：訳者はこの分野のことは何も知らないので，不自然な訳になっている可能性が高い．]．
 
 問題は，操作的意味論を用いてプログラムに関する何かを証明することは非常に難しいということだ．プログラムの何らかの性質を示すためには，本質的には，理想化されたインタープリタを通してプログラムを "実行" しなければならないのだ．
 
@@ -31,8 +31,8 @@ int fact(int n) {
 
 これ以上の説明が必要だろうか？
 
-分かった，はじめにこれはチートだったと認めなければならない．そもそも階乗関数には数学的な表示がある．鋭い読者は問うかも知れない：キーボードから文字を読み取ったり，ネットワーク上でパケットを送ったりすることの数学的なモデルは何か？と．とても長い間，この妙な問いにはやたらと複雑な説明をつけて応えることしかできなかった．表示的意味論は，現実的に有用なプログラムを書く上で必須となる多くのタスクに対して，操作的意味論では簡単に解決できるようなものに対しても，最適ではないように思われた．そこに圏論がブレイクスルーをもたらした．Eugenio Moggi は，計算的な副作用 (effect) はモナド (monad) によって表現できることを発見した．この発見が重要だったのは，表示的意味論に命を与え，純粋関数型プログラムをより有用なものにしただけでなく，従来のプログラミングに対しても新しい光をもたらしたのだ．モナドについては，圏論の準備が進んでから再び解説しよう．
+分かった，はじめにこれはチートだったと認めなければならない．そもそも階乗関数には数学的な表示がある．鋭い読者は問うかも知れない：キーボードから文字を読み取ったり，ネットワーク上でパケットを送ったりすることの数学的なモデルは何か？と．とても長い間，この妙な問いにはやたらと複雑な説明をつけて答えることしかできなかった．表示的意味論は，現実的に有用なプログラムを書く上で必須となる多くのタスクに対して，操作的意味論では簡単に解決できるようなものに対しても，最適ではないように思われた．そこに圏論がブレイクスルーをもたらした．Eugenio Moggi は，計算効果 (computational effect) はモナド (monad) によって表現できることを発見した．この発見が重要だったのは，表示的意味論に命を与え，純粋関数型プログラムをより有用なものにしただけでなく，従来のプログラミングに対しても新しい光をもたらしたのだ．モナドについては，圏論の準備が進んでから再び解説しよう．
 
-プログラミングの数学的モデルが存在することのメリットの一つは，ソフトウェアの正当性に関して形式的な証明を行うことができることだ．あなたが一般消費者向けのソフトウェアを書いているなら大して重要なことと思われないかも知れないが，失敗のコストが莫大だったり，人命に関わるようなプログラミングの分野もある．そこまで行かなくても，健康システムのウェブアプリケーションを書くような状況でも，Haskell の標準ライブラリに備わっている関数やアルゴリズムが正統性の保障付きだという事実はきっとありがたく感じられるだろう．
+プログラミングの数学的モデルが存在することのメリットの一つは，ソフトウェアの正当性に関して形式的な証明を行うことができることだ．あなたが一般消費者向けのソフトウェアを書いているなら大して重要なことと思われないかも知れないが，失敗のコストが莫大だったり，人命に関わるようなプログラミングの分野もある．そこまで行かなくても，健康システムのウェブアプリケーションを書くような状況でも，Haskell の標準ライブラリに備わっている関数やアルゴリズムが正当性の保証付きだという事実はきっとありがたく感じられるだろう．
 
 （和訳：[@taketo1024](https://zenn.dev/taketo1024)）
