fix typo in 1-4

--- a/books/850b20937af93b/1-4.md
+++ b/books/850b20937af93b/1-4.md
@@ -3,9 +3,9 @@ title: "1.4 練習問題"
 ---
 1. あなたが一番好きな言語で，恒等関数を実装せよ（Haskell が一番の場合には二番目で）
 2. 関数の合成を実装せよ（二つの関数を引数に取り，一つの関数を返す）．
-3. 恒等関数が合成に関して単位的だという用件をテストするプログラムを作れ．
+3. 恒等関数が合成に関して単位的だという要件をテストするプログラムを作れ．
 4. World-wide web は圏と見なせるか？ リンクは射だろうか？
 5. Facebook は圏と見なせるか？（ユーザを対象，友人関係を射として）
-6. 有効グラフは圏か？
+6. 有向グラフは圏か？
 
 （和訳：[@taketo1024](https://zenn.dev/taketo1024)）
