remove '§' from section title.

--- a/books/850b20937af93b/1-0.md
+++ b/books/850b20937af93b/1-0.md
@@ -1,5 +1,5 @@
 ---
-title: "§1. 合成の本質"
+title: "1. 合成の本質"
 ---
 原文：[1. Category: The Essence of Composition](https://bartoszmilewski.com/2014/11/04/category-the-essence-of-composition/)
 
