--- a/books/850b20937af93b/2-0.md
+++ b/books/850b20937af93b/2-0.md
@@ -1,5 +1,5 @@
 ---
-title: "§2. 型と関数"
+title: "2. 型と関数"
 ---
 原文: [2. Types and Functions](https://bartoszmilewski.com/2014/11/24/types-and-functions/)
 
