--- a/books/850b20937af93b/5-0.md
+++ b/books/850b20937af93b/5-0.md
@@ -1,5 +1,5 @@
 ---
-title: "§5. 積と余積"
+title: "5. 積と余積"
 ---
 
 原文: [5. Products and Coproducts](https://bartoszmilewski.com/2015/01/07/products-and-coproducts/)
