--- a/books/850b20937af93b/12-0.md
+++ b/books/850b20937af93b/12-0.md
@@ -2,6 +2,8 @@
 title: "12.0 極限と余極限"
 ---
 
+原文：[2. Limits and Colimits](https://bartoszmilewski.com/2015/04/15/limits-and-colimits/)
+
 圏論においては、全ては全てと関連しており、全てのものは沢山の角度から見ることができるように思われる。例えば、積の普遍的構成を見てみよう。今、我々は関手と自然変換を知っているわけだが、ひょっとしたら積の構成を簡単にしたり、一般化したりできるだろうか？やってみよう。
 
 ![](https://storage.googleapis.com/zenn-user-upload/g3yx61n0u0vtqe4u22uqfln3xrwa)
