--- a/books/850b20937af93b/12-1.md
+++ b/books/850b20937af93b/12-1.md
@@ -1,151 +1,112 @@
 ---
-title: "12.2 自然同型としての極限"
+title: "12.1 自然同型としての極限"
 ---
-% !TEX root = ../../ctfp-print.tex
+
+極限の定義についてはまだ不満なことがある。というのは、一応うまく行ってはいるけれども、任意の2つの錐を繋ぐ三角形について可換性条件が残っているのである。この可換性条件を何らかの自然性条件で置き換えたらもっとずっとエレガントになるだろう。でもどうやって？
+
+我々はもはや1つの錐だけではなく、錐全体のコレクション(実は圏をなしている)を扱っている。もし極限が存在するなら(はっきりさせておこう、存在する保証はない)、それら錐のうち1つが普遍錐である。その他の錐には、ただ1つの分解射であって、その頂点($c$とよぼう)を普遍錐の頂点($\mathrm{Lim}[D]$と名付けたのだった)に写すものが存在するのだった(実は、「その他の」という但し書きは落とすことができる。というのは、普遍錐からそれ自身に写す恒等射は自明にそれ自身を通る分解射だからである。)。重要な部分を繰り返させてほしい: 任意の錐について、ただ1つのある特殊な射が存在する。錐たちから特殊な射たちへの写像があり、それは1対1対応である。
+
+この特殊な射はhom集合$\mathbb{C}(c, \mathrm{Lim}[D])$の元である。このhom集合の他の元はそれら2つの錐の射を分解しないという点で比較的つまらないものである。いまやりたいことは、任意の$c$について集合$\mathbb{C}(c, \mathrm{Lim}[D])$から1つ射 --- ある特定の可換性条件を満たすような射 --- を選べるようにすることだ。これは自然変換のように聞こえないだろうか？そうに違いない！
+
+しかしこの自然変換で関連付けられる関手はなんだろう？
+
+1つの関手は$c$を$\mathbb{C}(c, \mathrm{Lim}[D])$に写す写像である。これは$\mathbb{C}$から$\mathrm{Set}$への関手である --- これは対象を集合に写す。これは反変関手である。写像についての作用はこのように定義する: $c'$から$c$への射$f$を取ろう:
+
+$$
+f \mathtt{::}\  c' \to c 
+$$
+
+この関手は$c'$を$\mathbb{C}(c', \mathrm{Lim}[D])$に写す。この関手の$f$への作用を定義するために(言い換えるなら、$f$を持ち上げるために)、$\mathbb{C}(c, \mathrm{Lim}[D])$と$\mathbb{C}(c', \mathrm{Lim}[D])$との間の対応する写像を定義しなければいけない。$\mathbb{C}(c, \mathrm{Lim}[D])$から1つの元$u$を取り、それを$\mathbb{C}(c', \mathrm{Lim}[D])$の何らかの元に写せるかを見てみよう。Hom集合の元は射なので、次が成り立つ:
+
+$$
+u  \mathtt{::}\  c\to \mathrm{Lim}[D]
+$$
+
+次を得るために、$u$の前に$f$を合成することができる:
+
+$$
+u.f \mathtt{::}\  c' \to \mathrm{Lim}[D]
+$$
 
 
-\section{Limit as a Natural Isomorphism}
+すると、これは$\mathbb{C}(c', \mathrm{Lim}[D])$の元である --- つまり実際、射たちの写像を見つけることができたことになる:
 
-There is still something unsatisfying about this definition of a limit.
-I mean, it's workable, but we still have this commutativity condition
-for the triangles that are linking any two cones. It would be so much
-more elegant if we could replace it with some naturality condition. But
-how?
+```haskell
+contramap :: (c' -> c) -> (c -> Lim D) -> (c' -> Lim D)
+contramap f u = u . f
+```
 
-We are no longer dealing with one cone but with a whole collection (in
-fact, a category) of cones. If the limit exists (and --- let's make it
-clear --- there's no guarantee of that), one of those cones is the
-universal cone. For every other cone we have a unique factorizing
-morphism that maps its apex, let's call it $c$, to the apex of
-the universal cone, which we named $\Lim[D]$. (In fact, I can skip
-the word ``other'', because the identity morphism maps the universal
-cone to itself and it trivially factorizes through itself.) Let me
-repeat the important part: given any cone, there is a unique morphism of
-a special kind. We have a mapping of cones to special morphisms, and
-it's a one-to-one mapping.
-
-This special morphism is a member of the hom-set $\cat{C}(c, \Lim[D])$.
-The other members of this hom-set are less fortunate, in the sense that
-they don't factorize the mapping of the two cones. What we want is to be able to
-pick, for each $c$, one morphism from the set
-$\cat{C}(c, \Lim[D])$ --- a morphism that satisfies the particular
-commutativity condition. Does that sound like defining a natural
-transformation? It most certainly does!
-
-But what are the functors that are related by this transformation?
-
-One functor is the mapping of $c$ to the set
-$\cat{C}(c, \Lim[D])$. It's a functor from $\cat{C}$ to $\Set$ ---
-it maps objects to sets. In fact it's a contravariant functor. Here's
-how we define its action on morphisms: Let's take a morphism $f$
-from $c'$ to $c$:
-\[f \Colon c' \to c\]
-Our functor maps $c'$ to the set
-$\cat{C}(c', \Lim[D])$. To define the action of this functor on
-$f$ (in other words, to lift $f$), we have to define the
-corresponding mapping between $\cat{C}(c, \Lim[D])$ and
-$\cat{C}(c', \Lim[D])$. So let's pick one element $u$ of
-$\cat{C}(c, \Lim[D])$ and see if we can map it to some element of
-$\cat{C}(c', \Lim[D])$. An element of a hom-set is a morphism, so
-we have:
-\[u \Colon c \to \Lim[D]\]
-We can precompose $u$ with $f$ to get:
-\[u . f \Colon c' \to \Lim[D]\]
-And that's an element of $\cat{C}(c', \Lim[D])$--- so indeed, we
-have found a mapping of morphisms:
-
-\src{snippet02}
-Notice the inversion in the order of $c$ and $c'$
-characteristic of a \emph{contravariant} functor.
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.35\textwidth]{images/homsetmapping.jpg}
-\end{figure}
-
-\noindent
-To define a natural transformation, we need another functor that's also
-a mapping from $\cat{C}$ to $\Set$. But this time we'll consider a
-set of cones. Cones are just natural transformations, so we are looking
-at the set of natural transformations $Nat(\Delta_c, D)$. The mapping
-from \code{c} to this particular set of natural transformations is a
-(contravariant) functor. How can we show that? Again, let's define its
-action on a morphism:
-\[f \Colon c' \to c\]
-The lifting of $f$ should be a mapping of natural transformations
-between two functors that go from $\cat{I}$ to $\cat{C}$:
-\[Nat(\Delta_c, D) \to Nat(\Delta_{c'}, D)\]
-How do we map natural transformations? Every natural transformation is a
-selection of morphisms --- its components --- one morphism per element
-of $\cat{I}$. A component of some $\alpha$ (a member of $Nat(\Delta_c, D)$) at
-$a$ (an object in $\cat{I}$) is a morphism:
-\[\alpha_a \Colon \Delta_c a \to D a\]
-or, using the definition of the constant functor $\Delta$,
-\[\alpha_a \Colon c \to D a\]
-Given $f$ and $\alpha$, we have to construct a $\beta$, a member of
-$Nat(\Delta_{c'}, D)$. Its component at $a$ should be a
-morphism:
-\[\beta_a \Colon c' \to D a\]
-We can easily get the latter ($\beta_a$) from the former ($\alpha_a$) by precomposing it with
-$f$:
-\[\beta_a = \alpha_a . f\]
-It's relatively easy to show that those components indeed add up to a
-natural transformation.
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.4\textwidth]{images/natmapping.jpg}
-\end{figure}
-
-\noindent
-Given our morphism $f$, we have thus built a mapping between two
-natural transformations, component-wise. This mapping defines
-\code{contramap} for the functor:
-\[c \to Nat(\Delta_c, D)\]
-What I have just done is to show you that we have two (contravariant)
-functors from $\cat{C}$ to $\Set$. I haven't made any assumptions
---- these functors always exist.
-
-Incidentally, the first of these functors plays an important role in
-category theory, and we'll see it again when we talk about Yoneda's
-lemma. There is a name for contravariant functors from any category
-$\cat{C}$ to $\Set$: they are called ``presheaves''. This one is
-called a \newterm{representable presheaf}. The second functor is also a
-presheaf.
-
-Now that we have two functors, we can talk about natural transformations
-between them. So without further ado, here's the conclusion: A functor
-$D$ from $\cat{I}$ to $\cat{C}$ has a limit $\Lim[D]$ if and
-only if there is a natural isomorphism between the two functors I have
-just defined:
-\[\cat{C}(c, \Lim[D]) \simeq Nat(\Delta_c, D)\]
-Let me remind you what a natural isomorphism is. It's a natural
-transformation whose every component is an isomorphism, that is to say
-an invertible morphism.
-
-I'm not going to go through the proof of this statement. The procedure
-is pretty straightforward if not tedious. When dealing with natural
-transformations, you usually focus on components, which are morphisms.
-In this case, since the target of both functors is $\Set$, the
-components of the natural isomorphism will be functions. These are
-higher order functions, because they go from the hom-set to the set of
-natural transformations. Again, you can analyze a function by
-considering what it does to its argument: here the argument will be a
-morphism --- a member of $\cat{C}(c, \Lim[D])$ --- and the result will
-be a natural transformation --- a member of $Nat(\Delta_c, D)$, or
-what we have called a cone. This natural transformation, in turn, has
-its own components, which are morphisms. So it's morphisms all the way
-down, and if you can keep track of them, you can prove the statement.
-
-The most important result is that the naturality condition for this
-isomorphism is exactly the commutativity condition for the mapping of
-cones.
-
-As a preview of coming attractions, let me mention that the set
-$Nat(\Delta_c, D)$ can be thought of as a hom-set in the functor
-category; so our natural isomorphism relates two hom-sets, which points
-at an even more general relationship called an adjunction.
+$c$と$c'$の順序が入れ替わっており、これが **反変** 関手の特徴であることに注意しよう。
 
 
+![](https://storage.googleapis.com/zenn-user-upload/faez0k10n4rqinabia1861k10abo)
+
+自然変換を定義するには、$\mathbb{C}$から$\mathrm{Set}$への写像[^1]となる別の関手が必要だ。今回は錐の集合を考えることにしよう。錐はただの自然変換なので、$\mathrm{Nat}(\Delta_c, D)$に注目しよう。`c`からこの自然変換たちの特別の集合への写像は(反変)関手である。そのことをどうやったら示せるだろう？再び、射への作用を定義しよう:
+
+$$
+f \mathtt{::}\  c' \to c
+$$
+
+$f$の持ち上げは$\mathbb{I}$から$\mathbb{C}$への2つの関手の間の自然変換たちの写像でなければならない:
+
+$$
+\mathrm{Nat}(\Delta_c, D) \to \mathrm{Nat}(\Delta_{c'}, D)
+$$
+
+どうやったら自然変換たちを写せるだろう？全ての自然変換は射たちを --- その成分を --- $\mathbb{I}$の元ごとに1つ選ぶことである。$\alpha$($\mathrm{Nat}(\Delta_c, D)$の元)の$a$($\mathbb{I}$の対象)での成分は射:
+
+$$
+\alpha_a \mathtt{::}\  \Delta_c a \to D a
+$$
+
+あるいは、定数関手$\Delta$の定義を使って、
+
+$$
+\alpha_a \mathtt{::}\  c \to D a
+$$
+
+である。
+
+与えられた$f$と$\alpha$について、$\mathrm{Nat}(\Delta_{c'}, D)$の元$\beta$を構成しなければいけない。その$a$での成分は射
+
+$$
+\beta_a \mathtt{::}\  c' \to D a
+$$
+
+でなければならない。後者($\beta_a$)は前者($\alpha_a$)から、$f$を手前に合成することによって簡単に作ることができる:
+
+$$
+\beta_a = \alpha_a . f
+$$
+
+これらの成分が実際自然変換になっていることを示すのは比較的簡単である。
+
+![](https://storage.googleapis.com/zenn-user-upload/1yr6yc6hn8yk3ocnwwcdtf4ulw6r)
+
+射$f$について、2つの自然変換たちの間の写像を成分ごとに構成してきた。この写像は関手
+
+$$
+c \to \mathrm{Nat}(\Delta_c, D)
+$$
+
+版の`contramap`を定義している。ここまでやってきたのは、$\mathbb{C}$から$\mathrm{Set}$への2つの(反変)関手があることを見せることだった。そして、それにあたって何も仮定を置いてこなかった --- これらの関手は常に存在するのである。
+
+ちなみに、1つ目の関手は圏論で重要な役割を果たし、この関手を米田の補題の話をするときに再び見ることになる。任意の圏$\mathbb{C}$から$\mathrm{Set}$への反変関手には名前がある: これらは「前層(presheaf)」とよばれる。この関手は **表現可能前層(representable presheaf)** とよばれる。2つめの関手もまた前層とよばれる。
+
+いま、2つの関手があるのでそれらの間の自然変換の話をすることができる。これ以上の面倒なことなしに、結論を述べよう: $\mathbb{I}$から$\mathbb{C}$への関手$D$は極限$\mathrm{Lim}[D]$を持つのは、さっき定義した2つの関手の間に自然変換
+
+$$
+\mathbb{C}(c, \mathrm{Lim}[D]) \simeq \mathrm{Nat}(\Delta_c, D)
+$$
+
+が存在するときであり、かつそのときに限る。自然同型がなんだったかを思い出させてほしい。自然同型は全ての成分が同型射(つまり可逆射)であるものだ。
+
+この主張の証明に進むつもりはない。証明の手続きは退屈ではないとしても極めて素直である。自然変換を扱うときは、成分たちに普通注目することになり、成分というのは射である。この場合、2つの関手の行き先は$\mathrm{Set}$なので、この自然変換の成分たちは関数となる。これらは高階関数である、なぜなら、これらの関数はHom集合から自然変換たちの集合へのものだからである。もう一度言うと、関数を調べるにはその関数が引数に何をするかを調べればよい: ここでは引数は射($\mathbb{C}(c, \mathrm{Lim}[D])$の元)であり、結果は自然変換($\mathrm{Nat}(\Delta_c, D)$の元、あるいはさっき我々が錐とよんだもの)である。一方、この自然変換は自分自身の成分を持っており、それらは射である。なので、大事なのは上から下まで射であり、それらを追い掛けることができればこの主張は証明できるのである。
+
+一番大事な結果は、この同型のための自然性条件ははぴったり錐の射のための自然性条件であるということである。
+
+次の出し物の次回予告として、集合$\mathrm{Nat}(\Delta_c, D)$は関手圏のHom集合と思えるということを言っておこう。なので、先程の自然変換は2つのHom集合を結び付け、随伴とよばれるより一般的な関係につながる。
+
+[^1]: 訳注: 3章で触れられている通り、圏$\mathbb{C}$の対象たちが集合より大きい可能性がありますし、集合の圏$\mathrm{Set}$は集合にはなりえませんが、このあたりの議論は"just one little nit for mathematicians"と言ってしまっているので、mappingは全部「写像」と訳しています。
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
