--- a/books/850b20937af93b/12-1.md
+++ b/books/850b20937af93b/12-1.md
@@ -93,7 +93,7 @@ $$
 
 ちなみに、1つ目の関手は圏論で重要な役割を果たし、この関手を米田の補題の話をするときに再び見ることになる。任意の圏$\mathbb{C}$から$\mathrm{Set}$への反変関手には名前がある: これらは「前層(presheaf)」とよばれる。この関手は **表現可能前層(representable presheaf)** とよばれる。2つめの関手もまた前層とよばれる。
 
-いま、2つの関手があるのでそれらの間の自然変換の話をすることができる。これ以上の面倒なことなしに、結論を述べよう: $\mathbb{I}$から$\mathbb{C}$への関手$D$は極限$\mathrm{Lim}[D]$を持つのは、さっき定義した2つの関手の間に自然変換
+いま、2つの関手があるのでそれらの間の自然変換の話をすることができる。これ以上の面倒なことなしに、結論を述べよう: $\mathbb{I}$から$\mathbb{C}$への関手$D$が極限$\mathrm{Lim}[D]$を持つのは、さっき定義した2つの関手の間に自然変換
 
 $$
 \mathbb{C}(c, \mathrm{Lim}[D]) \simeq \mathrm{Nat}(\Delta_c, D)
