随伴のあたりの訳をなおす

--- a/books/850b20937af93b/12-1.md
+++ b/books/850b20937af93b/12-1.md
@@ -105,7 +105,7 @@ $$
 
 一番大事な結果は、この同型のための自然性条件ははぴったり錐の射のための自然性条件であるということである。
 
-次の出し物の次回予告として、集合$\mathrm{Nat}(\Delta_c, D)$は関手圏のHom集合と思えるということを言っておこう。なので、先程の自然変換は2つのHom集合を結び付け、随伴とよばれるより一般的な関係につながる。
+次の出し物の次回予告として、集合$\mathrm{Nat}(\Delta_c, D)$は関手圏のHom集合と思えるということを言っておこう。なので、先程の自然変換は2つのHom集合を結び付ている。この自然変換は、随伴とよばれるより一般的な関係につながっていく。
 
 [^1]: 訳注: 3章で触れられている通り、圏$\mathbb{C}$の対象たちが集合より大きい可能性がありますし、集合の圏$\mathrm{Set}$は集合にはなりえませんが、このあたりの議論は"just one little nit for mathematicians"と言ってしまっているので、mappingは全部「写像」と訳しています。
 
