fix: misisng char

--- a/books/850b20937af93b/7-0.md
+++ b/books/850b20937af93b/7-0.md
@@ -3,7 +3,7 @@ title: "7. 関手"
 ---
 原文：[7. Functors](https://bartoszmilewski.com/2015/01/20/functors/)
 
-すでに話したかもしれないが，これから話すシンプルで強力な概念を**関手** (functor) と呼ぶことにする．圏論はこのような強力なアイディアの宝庫だ ．所与の圏 $C$ ，$D$ があるとき，関手 $F$ とは，圏 $C$ の対象から圏 $D$ の対象へマッピング（つまり対象から対象への関数）である．圏 $C$ の対象 $a$ の，圏 $D$ 上の像を $Fa$ と（括弧なしで）書くことにする．圏は対象とそれらを結ぶ射を持つが，関手はもちろん射もマッピングする．これはつまり射の関数だ．しかも行き当たりばったりのマッピングではなく，接続の関係を保存するようなマッピングである．圏 $C$ の射 $f$ が，対象 $a$, $b$ をつないでいるとすると，
+すでに話したかもしれないが，これから話すシンプルで強力な概念を**関手** (functor) と呼ぶことにする．圏論はこのような強力なアイディアの宝庫だ ．所与の圏 $C$ ，$D$ があるとき，関手 $F$ とは，圏 $C$ の対象から圏 $D$ の対象へのマッピング（つまり対象から対象への関数）である．圏 $C$ の対象 $a$ の，圏 $D$ 上の像を $Fa$ と（括弧なしで）書くことにする．圏は対象とそれらを結ぶ射を持つが，関手はもちろん射もマッピングする．これはつまり射の関数だ．しかも行き当たりばったりのマッピングではなく，接続の関係を保存するようなマッピングである．圏 $C$ の射 $f$ が，対象 $a$, $b$ をつないでいるとすると，
 
 $$f :: a \rightarrow b$$
 
