--- a/books/850b20937af93b/12-4.md
+++ b/books/850b20937af93b/12-4.md
@@ -2,73 +2,51 @@
 title: "12.4 連続性"
 ---
 
-I said previously that functors come close to the idea of continuous
-mappings of categories, in the sense that they never break existing
-connections (morphisms). The actual definition of a \emph{continuous
-functor} $F$ from a category $\cat{C}$ to $\cat{C'}$ includes the
-requirement that the functor preserve limits. Every diagram $D$
-in $\cat{C}$ can be mapped to a diagram $F \circ D$ in $\cat{C'}$ by
-simply composing two functors. The continuity condition for $F$
-states that, if the diagram $D$ has a limit $\Lim[D]$, then
-the diagram $F \circ D$ also has a limit, and it is equal to
-$F (\Lim[D])$.
+以前に、関手は圏の連続写像の概念に近いということを述べ、それはすでにある接続(射)を決して破壊しないという意味であった。圏$\mathbb{C}$から$\mathbb{C}'$への** 連続関手(continuous functor) ** $F$の実際の定義は、その関手が極限を保つという要請を含んでいる。$\mathbb{C}$の全ての図式$D$は、単に2つの関手を合成することによって$\mathbb{C}'$の図式$F\circ D$に写される。$F$についての連続性条件は、もし図式$D$が極限$\mathrm{Lim}[D]$を持つなら図式$F\circ D$の極限を持ち、それは$F (\mathrm{Lim}[D])$に等しいということを言っている。
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.6\textwidth]{images/continuity.jpg}
-\end{figure}
+![](https://storage.googleapis.com/zenn-user-upload/frg349rd9auoksdsncu9v8f6r0ml)
 
-\noindent
-Notice that, because functors map morphisms to morphisms, and
-compositions to compositions, an image of a cone is always a cone. A
-commuting triangle is always mapped to a commuting triangle (functors
-preserve composition). The same is true for the factorizing morphisms:
-the image of a factorizing morphism is also a factorizing morphism. So
-every functor is \emph{almost} continuous. What may go wrong is the
-uniqueness condition. The factorizing morphism in $\cat{C'}$ might not be
-unique. There may also be other ``better cones'' in $\cat{C'}$ that were
-not available in $\cat{C}$.
+関手は射を射に、合成を合成に写すので、錐の像は常に錐であることに注意しよう。可換な三角形は常に可換な三角形に写される(関手は合成を保つのだ)。同じことが射の分解についても真である: 分解射の像はまた分解射である。なので、すべての関手は **ほとんど** 連続である。おかしくなるかもしれないのは唯一性条件である。$\mathbb{C}'$の分解射は唯一ではないかもしれない。また、$\mathbb{C}'$に$\mathbb{C}$にはなかった他の「より良い錐」があるかもしれない。
 
-A hom-functor is an example of a continuous functor. Recall that the
-hom-functor, $\cat{C}(a, b)$, is contravariant in the first variable
-and covariant in the second. In other words, it's a functor:
-\[\cat{C}^{op} \times \cat{C} \to \Set\]
-When its second argument is fixed, the hom-set functor (which becomes
-the representable presheaf) maps colimits in $\cat{C}$ to limits in
-$\Set$; and when its first argument is fixed, it maps limits to
-limits.
+Hom関手は連続関手の一例である。Hom関手$\mathbb{C}(a, b)$は1つ目の変数について反変で、2つ目の変数について共変であることを思い出そう。言い換えると、これは関手
 
-In Haskell, a hom-functor is the mapping of any two types to a function
-type, so it's just a parameterized function type. When we fix the second
-parameter, let's say to \code{String}, we get the contravariant
-functor:
+$$
+\cat{C}^{op} \times \cat{C} \to \Set
+$$
 
-\src{snippet17}
-Continuity means that when \code{ToString} is applied to a colimit,
-for instance a coproduct \code{Either b c}, it will produce a limit;
-in this case a product of two function types:
+である。
 
-\src{snippet18}
-Indeed, any function of \code{Either b c} is implemented as a case
-statement with the two cases being serviced by a pair of functions.
+2つ目の引数が固定されると、この(表現可能前層となる)Hom-集合関手は$\mathbb{C}$の余極限を$\mathbf{Set}$の極限に写す。そして1つ目の引数が固定されると、これは極限を極限に写す。
 
-Similarly, when we fix the first argument of the hom-set, we get the
-familiar reader functor. Its continuity means that, for instance, any
-function returning a product is equivalent to a product of functions; in
-particular:
+Haskellでは、Hom関手は2つの型を関数型に写す写像であり、したがってパラメタ付けられた関数型である。2つ目の引数(`String`ということにしよう)を固定すると、反変関手
 
-\src{snippet19}
-I know what you're thinking: You don't need category theory to figure
-these things out. And you're right! Still, I find it amazing that such
-results can be derived from first principles with no recourse to bits
-and bytes, processor architectures, compiler technologies, or even
-lambda calculus.
+```
+newtype ToString a = ToString (a -> String)
+instance Contravariant ToString where
+    contramap f (ToString g) = ToString (g . f)
+```
 
-If you're curious where the names ``limit'' and ``continuity'' come
-from, they are a generalization of the corresponding notions from
-calculus. In calculus limits and continuity are defined in terms of open
-neighborhoods. Open sets, which define topology, form a category (a
-poset).
+が得られる。
+
+連続性は`ToString`が余極限(例えば余積`Either b c`)に適用されると、極限を生成されるということを意味する。この場合は、2つの関数型の積
+
+```
+ToString (Either b c) ~ (b -> String, c -> String)
+```
+
+である。実際、`Either b c`を定義域とするどんな関数も、関数のペアで提供される2つの場合分けを使って、case式によって実装される[^1]。
+
+同様に、Hom集合の1つ目の引数を固定するとお馴染Reader関手が得られる。この連続性は積を返す関数は関数の積に等しいということを意味している。具体的には:
+```
+r -> (a, b) ~ (r -> a, r -> b)
+```
+
+私にはあなたが何を考えているかわかるよ: これらのことを見出すのに圏論はいらないだろうと言うんだろう。そしてあなたは正しい！しかしそれでも、ビットやバイト、プロセッサ構成、コンパイラ技術やラムダ計算といったものに助けを求めることなく最初の原理だけからこれらの結果が導出できるということは、私は驚くべきことだと思う。
+
+もし「極限」や「連続性」といった名前がどこから来たかに興味があるなら、それらは微積分学の対応する概念の一般化になっているということを言っておこう。微積分学では、極限は連続性は開近傍の言葉で定義される。開集合(これは位相を定義する)は(posetの)圏を成すのである。
+
+
+[^1]: 訳注: 元の文はcase statementでしたが、Haskellにあるのはcase expressionだけなのでcase式と訳しています。
 
 
 （和訳：[@ashiato45](https://twitter.com/ashiato45)）
