fix: a translation of collapsing

--- a/books/850b20937af93b/7-0.md
+++ b/books/850b20937af93b/7-0.md
@@ -29,6 +29,6 @@ $$Fh = Fg.Ff$$
 
 $$F\mathbf{id}_a = \mathbf{id}_{Fa}$$
 
-ここで，$\mathbf{id}_a$ は対象 $a$ の恒等射であり，$\mathbf{id}_Fa$ は $Fa$ の恒等射である．これらの要請により，関手は一般的な関数より限定的なものになっていることに注意しよう．関手は圏の構造を維持しなければならないので，もし圏というものを射のネットワークでひとまとまりにされた対象とイメージするなら，関手はそれにいかなる傷をつける^[原文では introduce any tears into this fabric]ことも許されない．関手は複数の対象をくっつけるかもしれないし，複数の射をくっつけるかもしれないが，対象や射を分割することは許されないのだ．この，「傷をつけてはいけない」という制約^[原文では no-tearing constraint]は，微積分における連続性の条件と似ている．この意味で，関手は「連続」である．（関手のほうがより厳しい意味での連続かもしれない）．関数と同様に，関手も つぶれや埋め込みがありうる．埋め込みの性質は，始域の圏が終域の圏に比べてずっと小さい場合に特に面白い．極端な例として，始域がシングルトン圏，つまり一つの対象と一つの射（恒等射）からなる圏，を考えてみよう．シングルトン圏から任意の圏への関手は，単に対象を一つ選ぶだけである．これは，単集合からの射が値域の集合から要素を一つ選ぶというのと似ている．つぶれの性質が最も強い関手は定関手 $\Delta_c$ と呼ばれるものである．これは，始域の圏のすべての対象を終域の特定の対象 $c$ にマッピングし，始域の圏のすべての射を，$c$ の恒等射 $\mathbf{id}_c$ にマッピングする．これはまるであらゆるものを特異点に圧縮してしまうブラックホールのようなものだ．この圏については，極限と余極限の議論をする際に，より詳しく見ていく．
+ここで，$\mathbf{id}_a$ は対象 $a$ の恒等射であり，$\mathbf{id}_Fa$ は $Fa$ の恒等射である．これらの要請により，関手は一般的な関数より限定的なものになっていることに注意しよう．関手は圏の構造を維持しなければならないので，もし圏というものを射のネットワークでひとまとまりにされた対象とイメージするなら，関手はそれにいかなる傷をつける^[原文では introduce any tears into this fabric]ことも許されない．関手は複数の対象をくっつけるかもしれないし，複数の射をくっつけるかもしれないが，対象や射を分割することは許されないのだ．この，「傷をつけてはいけない」という制約^[原文では no-tearing constraint]は，微積分における連続性の条件と似ている．この意味で，関手は「連続」である．（関手のほうがより厳しい意味での連続かもしれない）．関数と同様に，関手にも潰しや埋め込みがありうる．埋め込みは，始域の圏が終域の圏に比べてずっと小さい場合に特に面白い．極端な例として，始域がシングルトン圏，つまり一つの対象と一つの射（恒等射）からなる圏，を考えてみよう．シングルトン圏から任意の圏への関手は，単に対象を一つ選ぶだけである．これは，単集合からの射が値域の集合から要素を一つ選ぶというのと似ている．つぶれの性質が最も強い関手は定関手 $\Delta_c$ と呼ばれるものである．これは，始域の圏のすべての対象を終域の特定の対象 $c$ にマッピングし，始域の圏のすべての射を，$c$ の恒等射 $\mathbf{id}_c$ にマッピングする．これはまるであらゆるものを特異点に圧縮してしまうブラックホールのようなものだ．この圏については，極限と余極限の議論をする際に，より詳しく見ていく．
 
 （和訳：[@takase](https://zenn.dev/takase)）
