--- a/books/850b20937af93b/12-2.md
+++ b/books/850b20937af93b/12-2.md
@@ -4,16 +4,16 @@ title: "12.2 極限の例"
 
 ここまで我々は、圏論的な積は$\mathbf{2}$とよばれる簡単な圏によって生成された図式の極限であることを見てきた。
 
-極限の例にはもっとずっと簡単なものがある: 終対象だ。すぐに思うのはシングルトン圏が終対象を導くのだろうということだろうが、真実はもっとずっと飾り気のないものだ: 終対象は空圏(empty category)から生成される。空圏からの関手は何の対象も選ばず、したがって錐はただの頂点に収縮する。普遍錐はどの他の頂点からもそこに来る唯一の射を持つような孤独な頂点である。これが終対象の定義であることがわかるだろう。
+極限の例にはもっとずっと簡単なものがある: 終対象だ。すぐに想像するのはシングルトン圏が終対象を導くということだろうが、真実はもっとずっと飾り気のないものだ: 終対象は空圏(empty category)から生成される。空圏からの関手は何の対象も選ばず、したがって錐はただの頂点に収縮する。普遍錐はどの他の頂点からもそこに来る唯一の射を持つような孤独な頂点である。これが終対象の定義であることはわかるだろう。
 
-次の面白い極限は **イコライザ(equalizer)** とよばれる。これは2つの対象とそれらの間を走る2つの並行な射(といつもどおり、恒等射たち)からなる圏から生成される極限である。この圏は2つの対象$a$と$b$、そして2つの射からなるような図式を$\mathbb{C}$のなかから選ぶ:
+次の面白い極限は **イコライザ(equalizer)** とよばれる。これは2つの対象とそれらの間を走る2つの並行な射(といつもどおり、恒等射たち)のなす圏から生成される極限である。この圏は2つの対象$a$と$b$、そして2つの射からなるような図式を$\mathbb{C}$のなかから選ぶ:
 
 $$
 f \mathtt{::}\   a \to b\\
 g \mathtt{::}\   a \to b
 $$
 
-この図式の上に錐を作るには、錐$c$と2つの射影を追加することになる:
+この図式の上に錐を作るには、頂点$c$と2つの射影を追加することになる:
 
 $$
 p\mathtt{::}\   c \to a\\
@@ -29,7 +29,7 @@ q = f.p\\
 q = g.p
 $$
 
-このことは$q$はこれらの等式のうちの1つ(たとえば$q=f.p$のほう)で唯一つに決定されると言っており、$q$を図から取り除くことができる。すると、1つの条件だけが残ることになる:
+これは、$q$はこれらの等式のうちの1つ(たとえば$q=f.p$のほう)で唯一つに決定されると言っており、$q$を図から取り除くことができる。すると、1つの条件だけが残ることになる:
 
 $$
 f.p = g.p
@@ -94,7 +94,7 @@ $$
 
 から成る。
 
-この図式はしばしば **コスパン(cospan)** とよばれる。
+この図式はしばしば **余スパン(cospan)** とよばれる。
 
 この図式の上にできる錐は頂点$d$と3つの射からなる:
 
@@ -124,9 +124,9 @@ $$
 
 この場合、$c$の選択は(これが空集合でない限り)関係がなく、したがってシングルトン集合として取ることができる。例えば、集合$a$は3次元ベクトルの集合で、$f$がベクトルの長さとしよう。すると、引き戻しはペア$(v, ())$の集合(ただし$v$は長さ1.23のベクトルであり、等式$\sqrt{(x^{2}+y^{2}+z^{2})} = 1.23$の解)であり、$()$はシングルトン集合のダミー元である。
 
-しかし引き戻しはもっと一般的な応用があり、プログラミングにも使える。例えばC++のクラスを、射がサブクラスとスーパークラスとを繋ぐ矢印である圏として考えよう。継承を推移的は性質だと考えられるので、もし`C`が`B`を継承し、`B`が`A`を継承しているなら、`C`は`A`を継承している(だって、`C`へのポインタを`A`へのポインタが期待されているところに渡すことはできるでしょう)。また、すべてのクラスが恒等射を持つように、`C`は`C`を継承していると仮定することにする。このようにして、サブクラス関係はサブタイピングと整合するようになる。C++はまた多重継承をサポートしているので、2つのクラス`B`と`C`が`A`を継承し、4番目のクラス`D`が`B`と`C`を多重に継承しているというダイヤモンド継承の図式を構成することができる。普通、`D`は`A`の2つのピーを持つことになるが、これは全く望まれることではない。しかし、`D`に`A`のコピーを1つだけ持つように仮想継承を使うことができる。
+しかし引き戻しはもっと一般的な応用があり、プログラミングにも使える。例えばC++のクラスを、射がサブクラスとスーパークラスとを繋ぐ矢印である圏として考えよう。継承は推移的な性質だと考えられるので、もし`C`が`B`を継承し、`B`が`A`を継承しているなら、`C`は`A`を継承している(だって、`C`へのポインタを`A`へのポインタが期待されているところに渡すことはできるでしょう)。また、すべてのクラスが恒等射を持つように、`C`は`C`を継承していると仮定することにする。このようにして、サブクラス関係はサブタイピングと整合するようになる。C++はまた多重継承をサポートしているので、2つのクラス`B`と`C`が`A`を継承し、4番目のクラス`D`が`B`と`C`を多重に継承しているというダイヤモンド継承の図式を構成することができる。普通、`D`は`A`の2つのコピーを持つことになるが、これは全く望まれることではない。しかし、`D`に`A`のコピーを1つだけ持つように仮想継承を使うことができる。
 
-`D`をこの図式の引き戻しにすることは何を意味するのだろう？これは`B`と`C`とを多重に継承するどんなクラス`E`もまた`D`のサブクラスであることを意味している。これを(サブタイピングが名前で行なわれる)C++で直接表現することはできない)C++コンパイラがこの種のクラス関係を推論することはないだろう --- これには「ダックタイピング」が必要だ)。しかし、サブタイピング関係の外側に出て、`E`から`D`へのキャストが安全かどうかを代わりに問うことはできる。このキャストは、`D`が`B`と`C`とを(追加のデータやメソッドのオーバーライドなしに)そのまま組み合わせたものなら安全だろう。そしてもちろん、`B`と`C`とのメソッドたちの間に名前の衝突があるなら、引き戻しは存在し得ない。
+`D`をこの図式の引き戻しにすることは何を意味するのだろう？これは`B`と`C`とを多重に継承するどんなクラス`E`もまた`D`のサブクラスであることを意味している。これを(サブタイピングが名前で行なわれる)C++で直接表現することはできない(C++コンパイラがこの種のクラス関係を推論することはないだろう --- これには「ダックタイピング」が必要だ)。しかし、サブタイピング関係の外側に出て、`E`から`D`へのキャストが安全かどうかを代わりに問うことはできる。このキャストは、`D`が`B`と`C`とを(追加のデータやメソッドのオーバーライドなしに)そのまま組み合わせたものなら安全だろう。そしてもちろん、`B`と`C`とのメソッドたちの間に名前の衝突があるなら、引き戻しは存在し得ない。
 
 ![](https://storage.googleapis.com/zenn-user-upload/kw3mor9ual1z1qo6kwfxm98qq3mj)
 
@@ -136,7 +136,7 @@ $$
 twice f x = f (f x)
 ```
 
-コンパイラは、すべての変数と部分式に準備の型を割り当てる。特に、このように割り当てられるだろう:
+コンパイラは、すべての変数と部分式に準備の型を割り当てる。具体的には、このように割り当てられるだろう:
 
 ```haskell
 f       :: t0
@@ -154,8 +154,8 @@ twice :: t0 -> t1 -> t3
 コンパイラは関数適用のルールから結論づけられる制約の集合を見つけもする:
 
 ```haskell
-t0 = t1 -> t2 -- because f is applied to x 
-t0 = t2 -> t3 -- because f is applied to (f x)
+t0 = t1 -> t2 --  fはxに適用されるから 
+t0 = t2 -> t3 -- fは(f x)に適用されるから
 ```
 
 両方の式の未知の型を置換したときに同じ型を生成するような型(あるいは型変数)の集合を見つけることによって、これらの制約は単一化されることになる。そのような置換の1つは:
