--- a/books/850b20937af93b/12-1.md
+++ b/books/850b20937af93b/12-1.md
@@ -6,7 +6,7 @@ title: "12.1 自然同型としての極限"
 
 我々はもはや1つの錐だけではなく、錐全体のコレクション(実は圏をなしている)を扱っている。もし極限が存在するなら(はっきりさせておこう、存在する保証はない)、それら錐のうち1つが普遍錐である。その他の錐には、ただ1つの分解射であって、その頂点($c$とよぼう)を普遍錐の頂点($\mathrm{Lim}[D]$と名付けたのだった)に写すものが存在するのだった(実は、「その他の」という但し書きは落とすことができる。というのは、普遍錐からそれ自身に写す恒等射は自明にそれ自身を通る分解射だからである。)。重要な部分を繰り返させてほしい: 任意の錐について、ただ1つのある特殊な射が存在する。錐たちから特殊な射たちへの写像があり、それは1対1対応である。
 
-この特殊な射はhom集合$\mathbb{C}(c, \mathrm{Lim}[D])$の元である。このhom集合の他の元はそれら2つの錐の射を分解しないという点で比較的つまらないものである。いまやりたいことは、任意の$c$について集合$\mathbb{C}(c, \mathrm{Lim}[D])$から1つ射 --- ある特定の可換性条件を満たすような射 --- を選べるようにすることだ。これは自然変換のように聞こえないだろうか？そうに違いない！
+この特殊な射はHom集合$\mathbb{C}(c, \mathrm{Lim}[D])$の元である。このHom集合の他の元はそれら2つの錐の射を分解しないという点で比較的つまらないものである。いまやりたいことは、任意の$c$について集合$\mathbb{C}(c, \mathrm{Lim}[D])$から1つ射 --- ある特定の可換性条件を満たすような射 --- を選べるようにすることだ。これは自然変換のように聞こえないだろうか？そうに違いない！
 
 しかしこの自然変換で関連付けられる関手はなんだろう？
 
@@ -93,7 +93,7 @@ $$
 
 ちなみに、1つ目の関手は圏論で重要な役割を果たし、この関手を米田の補題の話をするときに再び見ることになる。任意の圏$\mathbb{C}$から$\mathrm{Set}$への反変関手には名前がある: これらは「前層(presheaf)」とよばれる。この関手は **表現可能前層(representable presheaf)** とよばれる。2つめの関手もまた前層とよばれる。
 
-いま、2つの関手があるのでそれらの間の自然変換の話をすることができる。これ以上の面倒なことなしに、結論を述べよう: $\mathbb{I}$から$\mathbb{C}$への関手$D$が極限$\mathrm{Lim}[D]$を持つのは、さっき定義した2つの関手の間に自然変換
+いま、2つの関手があるのでそれらの間の自然変換の話をすることができる。これ以上の面倒なことなしに、結論を述べよう: $\mathbb{I}$から$\mathbb{C}$への関手$D$が極限$\mathrm{Lim}[D]$を持つのは、さっき定義した2つの関手の間に自然同型
 
 $$
 \mathbb{C}(c, \mathrm{Lim}[D]) \simeq \mathrm{Nat}(\Delta_c, D)
@@ -103,7 +103,7 @@ $$
 
 この主張の証明に進むつもりはない。証明の手続きは退屈ではないとしても極めて素直である。自然変換を扱うときは、成分たちに普通注目することになり、成分というのは射である。この場合、2つの関手の行き先は$\mathrm{Set}$なので、この自然変換の成分たちは関数となる。これらは高階関数である、なぜなら、これらの関数はHom集合から自然変換たちの集合へのものだからである。もう一度言うと、関数を調べるにはその関数が引数に何をするかを調べればよい: ここでは引数は射($\mathbb{C}(c, \mathrm{Lim}[D])$の元)であり、結果は自然変換($\mathrm{Nat}(\Delta_c, D)$の元、あるいはさっき我々が錐とよんだもの)である。一方、この自然変換は自分自身の成分を持っており、それらは射である。なので、大事なのは上から下まで射であり、それらを追い掛けることができればこの主張は証明できるのである。
 
-一番大事な結果は、この同型のための自然性条件ははぴったり錐の射のための自然性条件であるということである。
+一番大事な結果は、この同型のための自然性条件ははぴったり錐の射のための可換性条件であるということである。
 
 次の出し物の次回予告として、集合$\mathrm{Nat}(\Delta_c, D)$は関手圏のHom集合と思えるということを言っておこう。なので、先程の自然変換は2つのHom集合を結び付ている。この自然変換は、随伴とよばれるより一般的な関係につながっていく。
 
